--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+  	<link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
     <title>Kaltik</title>
+
 </head>
-<header>by laeluluk</header>
+
 
 <body>
     <div class="container">
@@ -21,22 +23,25 @@
             <div class="judul-persegi">
                 <h2>PERSEGI</h2>
             </div>
-            <div class="image-persegi"><img src="persegi.png" alt="persegi" width=100%></div>
+            <div class="image-persegi"><img src="persegi.png" alt="persegi" width = 120% ></div>
             <div class="rumus-persegi">L = S x S</div>
             <div class="keterangan-rumus-persegi">Ket: L = Luas</div>
         </div>
 
-        <div class="input">Input panjang sisi:<button class="reset">Reset</button></div>
+        <div class="input">
+          <label for="input-angka">Input panjang sisi:&nbsp</label>
+          <input type="number" id="input-angka" name="input-angka">&nbsp
+          <button class="reset">Reset</button></div>
 
         <div class="output">
             <div class="output-luas">
                 <h3>LUAS</h3>
-                <output name="output" for="luas">23</output><br>
+                <output name="output" for="luas">23</output><br><br>
                 <button class="hitung-luas">Hitung</button></div>
               
             <div class="output-keliling">
                 <h3>KELILING</h3>
-                <output name="output" for="keliling">23</output><br>
+                <output name="output" for="keliling">23</output><br><br>
                 <button class="hitung-keliling">Hitung</button></div>
         </div>
 
@@ -44,7 +49,8 @@
           <h2>OTHERS</h2>
               </div>
 
-        <div class="end-of-web">end of web</div>
+        <div class="end-of-web">brought to you by laeluluk
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
